--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,8 +5,8 @@ on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-git
-  LOCATION: EastUS
+  RESOURCE-GROUP: rg-eshoponweb-tt
+  LOCATION: westus2
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 678e27e4-96ae-46a9-848f-8a0e58fff4d1
   WEBAPP-NAME: eshoponweb-webapp52079778
